--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,18 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    
+    <build>
+	  <plugins>
+		<plugin>
+    			<groupId>org.eluder.coveralls</groupId>
+    			<artifactId>coveralls-maven-plugin</artifactId>
+    			<version>4.0.0</version>
+    			<configuration>
+        			<repoToken>yourcoverallsprojectrepositorytoken</repoToken>    						</configuration>
+		</plugin>
+
+	  </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>com.mycompany</groupId>
