--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,20 @@
     			<artifactId>coveralls-maven-plugin</artifactId>
     			<version>4.0.0</version>
     			<configuration>
-        			<repoToken>yourcoverallsprojectrepositorytoken</repoToken>    						</configuration>
+        			<repoToken>yourcoverallsprojectrepositorytoken</repoToken>
+			</configuration>
+		</plugin>
+
+		<plugin>
+    			<groupId>org.codehaus.mojo</groupId>
+    			<artifactId>cobertura-maven-plugin</artifactId>
+    			<version>2.7</version>
+    			<configuration>
+       				 <format>xml</format>
+       				 <maxmem>256m</maxmem>
+        			<!-- aggregated reports for multi-module projects -->
+       				<aggregate>true</aggregate>
+    			</configuration>
 		</plugin>
 
 	  </plugins>
